GH-0000 Complete query engine and storage fixes